--- a/src/app/abc-atta-dash/abc-atta-dash.component.scss
+++ b/src/app/abc-atta-dash/abc-atta-dash.component.scss
@@ -23,29 +23,55 @@
 
 .left-container {
      position: absolute;
-     top: 60px;
+     top: 64px;
      bottom: 60px;
      left: 0;
      right: 0;
-     height: calc(100vh - 65px);
+     height: calc(100vh - 60px);
      .sidenav {
           padding-top: 40px;
           display: flex;
           align-items: center;
           justify-content: center;
-          width: 300px;
-          background: #2196F3;
+          width: 240px;
+          background:  #0e5375;
+          border-radius: 0px;
+          // width:100%;
           p{
                width: 100%;
                // outline: 1px solid red;
                button{
-                    width: 80%;
+                    width: 100%;
                     // outline: 1px solid blue;
                     text-align: left;
                     &.active-but{
                          color:white;
-                         background: black;
+                         // background: black;
+                         background: rgb(35,131,182);
+                         background: linear-gradient(90deg, rgba(35,131,182,1) 0%, rgba(0,223,195,1) 100%);
+                         font-size: 14px;
+                         font-weight: bold;
+                         font-stretch: normal;
+                         font-style: normal;
+                         line-height: normal;
+                         letter-spacing: normal;
+                         color: #ffffff;
+                         padding-top:10px;
+                         padding-bottom:10px;
+                         padding-left: 15px;
+                         border-radius: 0px;
+                         width: 100%;
                     }
+                    font-size: 14px;
+                    font-weight: normal;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: normal;
+                    letter-spacing: normal;
+                    color: #ffffff;
+                    padding-top:10px;
+                    padding-bottom:10px;
+                    padding-left: 15px;
                }
           }
      }
@@ -86,9 +112,9 @@
                position: relative;
                flex: auto;
                min-width: 0;
-               width: 180px;
+               width: 270px;
                display: flex;
-               justify-content: flex-end;
+               justify-content: flex-start;
            }
 
      }
@@ -114,25 +140,78 @@
 
  ::ng-deep .mat-menu-panel {
      max-width: none !important;
-     min-width: 400px !important;
-     max-width: 400px !important;
+     min-width: 300px !important;
+     max-width: 300px !important;
      // outline: 5px solid red;
      background: white;
-     padding: 20px 30px;;
+     padding: 40px 20px 20px 20px;
+     box-sizing:border-box; 
      .content-filtro{
           .title-filter{
-               font-weight: bold;
+               font-size: 24px;
+               font-weight: normal;
+               font-stretch: normal;
+               font-style: normal;
+               line-height: 1.33;
+               letter-spacing: normal;
+               color: #323232;
           }
+          .filters{
+               width: 255px;
+               mat-form-field{
+                    width:255px;
+                    margin-left:0px !important;
+                    margin-top:20px;
+               }
+          }
+          .mat-raised-button {
+               margin-top:40px;
+               background-color: #2383b6;
+               color:white;
+               height: 25px;
+               border-radius: 4px;
+               background-color: #2383b6;
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               width: 100%;
+               padding-top: 15px;
+               padding-bottom: 15px;
+             }
      }
    }
  
 
    
 mat-table {
-     width: 950px;
+     width: 1105px;
      margin: 0 auto;
+     border-bottom-left-radius: 4px;
+     border-bottom-right-radius: 4px;
+     border: solid 1px #cccccc;
+     .mat-header-cell{
+          // outline: 1px solid blue;
+          font-size: 16px;
+          font-weight: 600;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: #53565a;
+     }
      .mat-row{
           border-bottom-width: 0px;
+          font-size: 14px;
+          border-bottom: 1px solid #c6c6c6;
+          .mat-cell{
+               font-weight: normal;
+               font-stretch: normal;
+               font-style: normal;
+               line-height: 1.71;
+               letter-spacing: normal;
+               color: #323232;
+
+          }
 
      } 
      .mat-header-row{
@@ -173,122 +252,268 @@ mat-table {
      .filtro{
           display: flex;
           justify-content: space-between;
-          background: rgba(0,0,0,.2);
-          height:60px ;
-          width: 950px;
+          background: white;
+          min-height:60px ;
+          width: 1105px;
           margin:0 auto;
-          .cont-chips-title{
-             width: 230px;  
-             display: flex;
-             justify-content: flex-start;
-             align-items: center;
-          //    outline: 1px solid red;
-
-             h2{
-                  margin-top:0 ;
-                  margin-bottom:0 ;
-                  padding-left: 10px;
-             }
-          }
-          .cont-chips-prin{
-               // outline: 5px solid blue;
-               width: 650px;
+          border-top-left-radius: 4px;
+          border-top-right-radius: 4px;
+          // border-radius: 4px;
+          border: solid 1px #cccccc;
+          flex-direction: column;
+          .row-up{
                display: flex;
-               justify-content: flex-end;
-               &.first{
-                    justify-content: space-around;
-                    // background: red;
-                    .cont-tent{
-                         width: 650px;
-                         // outline:13px solid green;
-                         .cont-chips-cont{
-                              width:500px;
-                              .mat-form-field .mat-form-field-wrapper .mat-form-field-infix {
-                                   position: relative;
-                                   flex: auto;
-                                   min-width: 0;
-                                   width: 180px;
-                                   display: flex;
-                                   justify-content: flex-start;
+               justify-content: space-between;
+               background: white;
+               height:60px ;
+               .cont-chips-title{
+                  width: 230px;  
+                  display: flex;
+                  justify-content: flex-start;
+                  align-items: center;
+               //    outline: 1px solid red;
+     
+                  h2{
+                       margin-top:0 ;
+                       margin-bottom:0 ;
+                       padding-left: 20px;
+                  }
+               }
+               .cont-chips-prin{
+                    // outline: 5px solid blue;
+                    width: 850px;
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: center;
+                    &.first{
+                         justify-content: space-around;
+                         // background: red;
+                         .cont-tent{
+                              width: 650px;
+                              // outline:13px solid green;
+                              .cont-chips-cont{
+                                   width:500px;
+                                   .mat-form-field .mat-form-field-wrapper .mat-form-field-infix {
+                                        position: relative;
+                                        flex: auto;
+                                        min-width: 0;
+                                        width: 180px;
+                                        display: flex;
+                                        justify-content: flex-start;
+                                   }
                               }
-                         }
-                         .content-all{
-                              .cont-select-all{
-                                   display: flex;
-                                   button{
-                                        margin-left:10px;
-                                        margin-right:10px;
+                              .content-all{
+                                   .cont-select-all{
+                                        display: flex;
+                                        button{
+                                             margin-left:10px;
+                                             margin-right:10px;
+                                        }
                                    }
                               }
                          }
                     }
-               }
-
-               .cont-tent{
-                    width: 500px;
-                    // outline: 12px solid blue;
-                    display: flex;
-                    justify-content: flex-end;
-                    .cont-chips-cont{
-                         
-                         width: 400px;
-                         .mat-form-field-appearance-legacy .mat-form-field-underline{
-                              // border:5px solid red !important;
-                              // outline: 1px solid blue;
-                         }
-                         .mat-form-field{
-                              width: 400px;
-                              .mat-input-underline {
-                                   display: none;
-                               }
-                              // outline: 1px solid blue;
-                              .mat-form-field-wrapper {
-                                   // outline: 1px solid red;
-          
-                              }
-                              .mat-chip-list-wrapper{
-                                   justify-content: flex-end;
-                              }
-                              
-                         }
-                    }
-                    .content-all{
+     
+                    .cont-tent{
+                         width: 500px;
+                         // outline: 12px solid blue;
                          display: flex;
-                         justify-content: center;
+                         justify-content: flex-end;
+                         .cont-chips-cont{
+                              width: 400px;
+                              .mat-form-field-appearance-legacy .mat-form-field-underline{
+                                   // border:5px solid red !important;
+                                   // outline: 1px solid blue;
+                              }
+                              .mat-form-field{
+                                   width: 400px;
+                                   .mat-input-underline {
+                                        display: none;
+                                    }
+                                   // outline: 1px solid blue;
+                                   .mat-form-field-wrapper {
+                                        // outline: 1px solid red;
+               
+                                   }
+                                   .mat-chip-list-wrapper{
+                                        justify-content: flex-end;
+                                   }
+                                   
+                              }
+                         }
+                         .content-all{
+                              display: flex;
+                              justify-content: center;
+                              align-items: center;
+                              .cont-select-all{
+     
+                              }
+                         }
+                    }
+                    .cont-chips-button{
+                         width:50px;
+                         // outline: 1px solid green;
+                         display: flex;
                          align-items: center;
-                         .cont-select-all{
-
+                         justify-content: center;
+                         margin-right: 25px;
+                         margin-left: 25px;
+                         mat-icon{
+                              color:#2383b6;
                          }
                     }
                }
-               .cont-chips-button{
-                    width:50px;
-                    // outline: 1px solid green;
+
+          }
+          .row-bottom{
+               display: flex;
+               width: 100%;
+               min-height:50px;
+               // outline:1px solid blue;
+               .title-filter{
                     display: flex;
-                    align-items: center;
                     justify-content: center;
+                    align-items: center;
+                    font-size: 14px;
+                    font-weight: normal;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: 1.71;
+                    letter-spacing: normal;
+                    color: #323232;
+                    margin-left: 20px;
+               }.cont-chips-cont{
+                    margin-left: 20px;
+                    .mat-chip.mat-standard-chip {
+                         background-color: #fafafa;
+                         color: rgba(0,0,0,.87);
+                         border: 1px solid #cccccc;
+                         font-size: 10px;
+                         font-weight: normal;
+                         font-stretch: normal;
+                         font-style: normal;
+                         line-height: normal;
+                         letter-spacing: normal;
+                         color: #525252;
+                     }
                }
+
+          }
+          .mat-raised-button {
+               background-color: #2383b6;
+               color:white;
+               height: 30px;
+               border-radius: 4px;
+               background-color: #2383b6;
+               display: flex;
+               justify-content: center;
+               align-items: center;
           }
      }
+
+     .mat-column-name {
+          word-wrap: break-word !important;
+          white-space: unset !important;
+          flex: 0 0 25% !important;
+          width: 25% !important;
+          overflow-wrap: break-word;
+          word-wrap: break-word;
+        
+          word-break: break-word;
+        
+          -ms-hyphens: auto;
+          -moz-hyphens: auto;
+          -webkit-hyphens: auto;
+          hyphens: auto;
+         //  outline: 1px solid green;
+          justify-content: flex-start;
+          align-items: center;
+
+        }
+
+
+        .mat-column-level{
+          word-wrap: break-word !important;
+          white-space: unset !important;
+          flex: 0 0 20% !important;
+          width: 20% !important;
+          overflow-wrap: break-word;
+          word-wrap: break-word;
+        
+          word-break: break-word;
+        
+          -ms-hyphens: auto;
+          -moz-hyphens: auto;
+          -webkit-hyphens: auto;
+          hyphens: auto;
+         //  outline: 1px solid green;
+         justify-content: flex-start;
+         align-items: center;
+
+        }
+
+     .mat-column-email {
+           word-wrap: break-word !important;
+           white-space: unset !important;
+           flex: 0 0 15% !important;
+           width: 15% !important;
+           overflow-wrap: break-word;
+           word-wrap: break-word;
          
-     //     .mat-column-select {
-     //       word-wrap: break-word !important;
-     //       white-space: unset !important;
-     //       flex: 0 0 5% !important;
-     //       width: 5% !important;
-     //      //  outline: 1px solid red;
-     //       overflow-wrap: break-word;
-     //       word-wrap: break-word;
+           word-break: break-word;
          
-     //       word-break: break-word;
+           -ms-hyphens: auto;
+           -moz-hyphens: auto;
+           -webkit-hyphens: auto;
+           hyphens: auto;
+          //  outline: 1px solid blue;
+          justify-content: flex-start;
+           align-items: center;
+
+         }
+
+         .mat-column-bussinets {
+          word-wrap: break-word !important;
+          white-space: unset !important;
+          flex: 0 0 25% !important;
+          width: 25% !important;
+          overflow-wrap: break-word;
+          word-wrap: break-word;
+        
+          word-break: break-word;
+        
+          -ms-hyphens: auto;
+          -moz-hyphens: auto;
+          -webkit-hyphens: auto;
+          hyphens: auto;
+         //  outline: 1px solid blue;
+         justify-content: flex-start;
+         align-items: center;
+
+        }
+
+
+
          
-     //       -ms-hyphens: auto;
-     //       -moz-hyphens: auto;
-     //       -webkit-hyphens: auto;
-     //       hyphens: auto;
-     //       padding-left: 0px;
-     //       justify-content: center;
-     //     }
+         .mat-column-recluiterId {
+           word-wrap: break-word !important;
+           white-space: unset !important;
+           flex: 0 0 10% !important;
+           width: 10% !important;
+          //  outline: 1px solid red;
+           overflow-wrap: break-word;
+           word-wrap: break-word;
+         
+           word-break: break-word;
+         
+           -ms-hyphens: auto;
+           -moz-hyphens: auto;
+           -webkit-hyphens: auto;
+           hyphens: auto;
+           padding-left: 0px;
+           justify-content: flex-start;
+           align-items: center;
+          }
          
      //     .mat-column-id {
      //       word-wrap: break-word !important;
@@ -309,45 +534,9 @@ mat-table {
      //       align-items: center;
      //     }
          
-     //     .mat-column-name {
-     //       word-wrap: break-word !important;
-     //       white-space: unset !important;
-     //       flex: 0 0 20% !important;
-     //       width: 20% !important;
-     //       overflow-wrap: break-word;
-     //       word-wrap: break-word;
+        
          
-     //       word-break: break-word;
-         
-     //       -ms-hyphens: auto;
-     //       -moz-hyphens: auto;
-     //       -webkit-hyphens: auto;
-     //       hyphens: auto;
-     //      //  outline: 1px solid green;
-     //       justify-content: center;
-     //       align-items: center;
-
-     //     }
-         
-     //     .mat-column-status {
-     //       word-wrap: break-word !important;
-     //       white-space: unset !important;
-     //       flex: 0 0 20% !important;
-     //       width: 20% !important;
-     //       overflow-wrap: break-word;
-     //       word-wrap: break-word;
-         
-     //       word-break: break-word;
-         
-     //       -ms-hyphens: auto;
-     //       -moz-hyphens: auto;
-     //       -webkit-hyphens: auto;
-     //       hyphens: auto;
-     //      //  outline: 1px solid blue;
-     //       justify-content: center;
-     //       align-items: center;
-
-     //     }
+ 
      //     .mat-column-options {
      //           word-wrap: break-word !important;
      //           white-space: unset !important;
