--- a/src/app/abc-atta/abc-atta.component.scss
+++ b/src/app/abc-atta/abc-atta.component.scss
@@ -18,25 +18,47 @@
      bottom: 60px;
      left: 0;
      right: 0;
-     height: 900px;
+     height: calc(100vh - 60px);
      .sidenav {
           padding-top: 40px;
           display: flex;
           align-items: center;
           justify-content: center;
-          width: 300px;
-          background: #2196F3;
+          width: 240px;
+          background:  #0e5375;
           p{
                width: 100%;
-               outline: 1px solid red;
+               // outline: 1px solid red;
                button{
-                    width: 80%;
-                    outline: 1px solid blue;
+                    width: 100%;
+                    // outline: 1px solid blue;
                     text-align: left;
                     &.active-but{
-                         color:Red;
-                         background: black;
+                         color:white;
+                         // background: black;
+                         background: rgb(35,131,182);
+                         background: linear-gradient(90deg, rgba(35,131,182,1) 0%, rgba(0,223,195,1) 100%);
+                         font-size: 14px;
+                         font-weight: bold;
+                         font-stretch: normal;
+                         font-style: normal;
+                         line-height: normal;
+                         letter-spacing: normal;
+                         color: #ffffff;
+                         padding-top:10px;
+                         padding-bottom:10px;
+                         padding-left: 15px;
                     }
+                    font-size: 14px;
+                    font-weight: normal;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: normal;
+                    letter-spacing: normal;
+                    color: #ffffff;
+                    padding-top:10px;
+                    padding-bottom:10px;
+                    padding-left: 15px;
                }
           }
      }
@@ -46,11 +68,11 @@
                display: flex;
                .content-title{
                     flex-basis: 70%;
-                    outline: 1px solid blue;
+                    // outline: 1px solid blue;
                }
                .content-progress{
                     flex-basis: 30%;
-                    outline: 1px solid red;
+                    // outline: 1px solid red;
                }
           }
      }
