--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@100;300;400;600;800&display=swap');
 
 html, body { height: 100%;background: white; margin:0}
-body { margin: 0; font-family: 'Roboto', sans-serif;}
+body { margin: 0; font-family: 'Prompt', sans-serif;}
 
 
 .swal2-styled.swal2-confirm{
